--- a/index.html
+++ b/index.html
@@ -88,16 +88,14 @@
         <div class="whiteboxed">
           ESA encourages and facilitates the academic, pre-professional, cultural, social, and political self-realization of the University of Southern California’s environmental student groups as individuals and as a unified student community and advances and develops the green culture of the University and neighboring community.
         </div>
-        It is our mission ...
+        It is our mission to...
         <div class="whiteboxed left"><ul>
           <!-- INSERT NEW OBJECTIVES HERE" -->
-          <li>To program events promoting the green culture, sustainability, and environmental advocacy at USC</li>
+          <li>Engage: connect students to the environmental community through our programming and bring in new students to ideas of sustainability.</li>
 
-          <li>To foster environmental and sustainable initiatives, programs, and awareness for the USC community</li>
+          <li>Inform: provide students with correct information about environmental issues and about university action to confront them.</li>
 
-          <li>To unite, represent, empower, and serve as a resource to members of the assembly and member student organizations with the same purpose</li>
-
-          <li>To partner with other divisions of USC Program Board to help make their events more green, sustainable, and environmentally conscious</li>
+          <li>Empower: give students the resources and opportunities to get involved, voice their interests, and have an impact.</li>
         </ul></div>
         <div class="blackboxed">
           Click <a target="_blank" href="images/map-of-sustainability.png">here</a> to see how we fit into USC’s environmental community!
@@ -223,7 +221,6 @@
           <h1>Executive Board</h1>
           <div>
             Executive Directors (<a href="#fig10">Olivia</a> &amp; <a href="#fig15">Emily</a>)<br>
-            Assistant Director (<a href="#fig14">Caden</a>)<br>
             Diretor of Events (<a href="#fig14">Joseph</a>)<br>
             Director of Financial Operations (<a href="#fig14">Soven</a>)<br>
             Director of External Affairs (<a href="#fig16">Firuze</a>)<br>
@@ -264,35 +261,6 @@
                   </figcaption>
                   <figcaption>
                     <strong>Spirit Vegetable:</strong> CARROTS
-                  </figcaption>
-                </figure>
-              </a>
-              <a>
-                <figure id="fig2">
-                  <img src="images/Caden 61.jpg" alt="">
-                  <h2>
-                    Caden Cervesis
-                  </h2>
-                  <em>
-                    Assistant Director
-                  </em>
-                  <figcaption>
-                    <strong>Year:</strong> Junior
-                  </figcaption>
-                  <figcaption>
-                    <strong>Major:</strong> Environmental Science and Health
-                  </figcaption>
-                  <figcaption>
-                    <strong>Minors:</strong> Photography and Social Change; Helath
-                  </figcaption>
-                  <figcaption>
-                    <strong>Hometown:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Fun Fact:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
