--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
         It is our mission to...
         <div class="whiteboxed left"><ul>
           <!-- INSERT NEW OBJECTIVES HERE" -->
-          <li>Engage: connect students to the environmental community through our programming and bring in new students to ideas of sustainability.</li>
+          <li>_Engage_: connect students to the environmental community through our programming and bring in new students to ideas of sustainability.</li>
 
-          <li>Inform: provide students with correct information about environmental issues and about university action to confront them.</li>
+          <li>_Inform_: provide students with correct information about environmental issues and about university action to confront them.</li>
 
-          <li>Empower: give students the resources and opportunities to get involved, voice their interests, and have an impact.</li>
+          <li>_Empower_: give students the resources and opportunities to get involved, voice their interests, and have an impact.</li>
         </ul></div>
         <div class="blackboxed">
           Click <a target="_blank" href="images/map-of-sustainability.png">here</a> to see how we fit into USC’s environmental community!
@@ -939,9 +939,6 @@
                 </div><!-- .entry-content -->
               </div>
             </div>
-          
-   
-          
             <div id="contact" class="subcontent">
               <h1>Contact</h1>
               <!-- uscesa@usc.edu -->
