Fixed links for board, added submission destination for contact form.

--- a/index.html
+++ b/index.html
@@ -220,23 +220,23 @@
         <div id="eboard" class="subcontent">
           <h1>Executive Board</h1>
           <div>
-            Executive Directors (<a href="#fig10">Olivia</a> &amp; <a href="#fig15">Emily</a>)<br>
-            Diretor of Events (<a href="#fig14">Joseph</a>)<br>
-            Director of Financial Operations (<a href="#fig14">Soven</a>)<br>
-            Director of External Affairs (<a href="#fig16">Firuze</a>)<br>
-            Director of Internal Affairs (<a href="#fig1">Sachi</a>)<br>
-            Directors of Advocacy (<a href="#fig4">Carissa</a> &amp; <a href="#fig2">Autumn</a>)<br>
-            Directors of Outreach (<a href="#fig3">Devin</a> &amp; <a href="#fig5">Margaux</a>)<br>
-            Director of Public Relations (<a href="#fig13">Claire</a>)<br>
-            Social Media Chairs (<a href="#fig4">Maryam</a> &amp; <a href="#fig2">Emily</a>)<br>
-            Technology Chair (<a href="#fig8">Isabella</a>)<br>
-            Community Gardens Chair (<a href="#fig11">Ogechi</a>)<br>
-            Greek Relations Chairs (<a href="#fig3">Olivia</a> &amp; <a href="#fig5">Samantha</a>)<br><br>
+            Executive Directors (<a href="#OliviaP">Olivia</a> &amp; <a href="#EmilyP">Emily</a>)<br>
+            Diretor of Events (<a href="#Joseph">Joseph</a>)<br>
+            Director of Financial Operations (<a href="#Soven">Soven</a>)<br>
+            Director of External Affairs (<a href="#Firuze">Firuze</a>)<br>
+            Director of Internal Affairs (<a href="#Sachi">Sachi</a>)<br>
+            Directors of Advocacy (<a href="#Carissa">Carissa</a> &amp; <a href="#Autumn">Autumn</a>)<br>
+            Directors of Outreach (<a href="#Devin">Devin</a> &amp; <a href="#Margaux">Margaux</a>)<br>
+            Director of Public Relations (<a href="#Claire">Claire</a>)<br>
+            Social Media Chairs (<a href="#Maryam">Maryam</a> &amp; <a href="#EmilyQ">Emily</a>)<br>
+            Technology Chair (<a href="#Isabella">Isabella</a>)<br>
+            Community Gardens Chair (<a href="#Ogechi">Ogechi</a>)<br>
+            Greek Relations Chairs (<a href="#OliviaC">Olivia</a> &amp; <a href="#Samantha">Samantha</a>)<br><br>
           </div>
           <div class="grid">
             <div>
               <a>
-                <figure id="fig1">
+                <figure id="Autumn">
                   <img src="images/Autumn 73.jpg" alt="">
                   <h2>
                     Autumn Gupta
@@ -265,7 +265,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig3">
+                <figure id="Carissa">
                   <img src="images/Carissa.jpg" alt="">
                   <h2>
                    Carissa Velasquez
@@ -291,7 +291,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig4">
+                <figure id="Claire">
                   <img src="images/Claire.jpg" alt="">
                   <h2>
                     Claire Mauss
@@ -317,7 +317,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig5">
+                <figure id="Devin">
                   <img src="images/Devin.jpg" alt="">
                   <h2>
                     Devin Manion
@@ -343,7 +343,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig6">
+                <figure id="EmilyP">
                   <img src="images/esa-logo.png" alt="">
                   <h2>
                     Emily Palmer
@@ -369,7 +369,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig7">
+                <figure id="EmilyQ">
                   <img src="images/Emily 72.jpg" alt="">
                   <h2>
                     Emily Quirke
@@ -395,7 +395,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig8">
+                <figure id="Firuze">
                   <img src="images/esa-logo.png" alt="">
                   <h2>
                     Firuze Barimani
@@ -421,7 +421,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig9">
+                <figure id="Isabella">
                   <img src="images/Isabella 71.jpg" alt="">
                   <h2>
                     Isabella Caltabiano
@@ -450,7 +450,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig10">
+                <figure id="Joseph">
                   <img src="images/esa-logo.png" alt="">
                   <h2>
                     Joseph Mathews
@@ -476,7 +476,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig11">
+                <figure id="Margaux">
                   <img src="images/esa-logo.png" alt="">
                   <h2>
                     Margaux Wilson
@@ -502,7 +502,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig12">
+                <figure id="Maryam">
                   <img src="images/Maryam 56.jpg" alt="">
                   <h2>
                     Maryam Sultan
@@ -528,7 +528,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig13">
+                <figure id="Ogechi">
                   <img src="images/Ogechi 59.jpg" alt="">
                   <h2>
                     Ogechi Ibeanusi
@@ -554,7 +554,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig14">
+                <figure id="OliviaC">
                   <img src="images/Olivia C 54.jpg" alt="">
                   <h2>
                     Olivia Carmack
@@ -580,7 +580,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig15">
+                <figure id="OliviaP">
                   <img src="images/Olivia 71.jpg" alt="">
                   <h2>
                     Olivia Pearson
@@ -606,7 +606,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig16">
+                <figure id="Sachi">
                   <img src="images/Sachi 59.jpg" alt="">
                   <h2>
                     Sachi Elias
@@ -632,7 +632,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig17">
+                <figure id="Samantha">
                   <img src="images/esa-logo.png" alt="">
                   <h2>
                     Samantha Archie
@@ -658,7 +658,7 @@
                 </figure>
               </a>
               <a>
-                <figure id="fig17">
+                <figure id="Soven">
                   <img src="images/Soven.jpg" alt="">
                   <h2>
                     Soven Bery
@@ -946,21 +946,21 @@
                 <p>Seen an environmental problem in our community? Have an idea you’d like to see come to life? An event you’d like to see on campus? Want to be more involved but don’t know how? Leave a question, comment, and/or suggestion below.</p>
                 <br>
                 <center>
-                  <form class="form-style-4" action="" method="post">
+                  <form class="form-style-4" action="https://formspree.io/dgarry@usc.edu" method="post">
                     <label for="field1">
-                      <span>Your Name</span><input type="text" name="field1" required="true" />
+                      <span>Your Name</span><input type="text" name="name" required="true" />
                     </label>
                     <label for="field2">
-                      <span>Email Address</span><input type="email" name="field2" required="true" />
+                      <span>Email Address</span><input type="email" name="_replyto" required="true" />
                     </label>
                     <label for="field3">
-                      <span>Subject</span><input type="text" name="field3" required="true" />
+                      <span>Subject</span><input type="text" name="subject" required="true" />
                     </label>
                     <label for="field4">
-                      <span>Your Message</span><textarea name="field4" onkeyup="adjust_textarea(this)" required="true"></textarea>
+                      <span>Your Message</span><textarea name="message" onkeyup="adjust_textarea(this)" required="true"></textarea>
                     </label>
                     <label>
-                      <span>&nbsp;</span><input type="submit" value="Submit" />
+                      <span>&nbsp;</span><input type="submit" value="Send" />
                     </label>
                   </form>
                 </center>
