--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <a class="blocked" onclick="showPartners();" href="#">Partners</a>
     <a class="blocked" onclick="showMembers();" href="#">Member Organizations</a>
     <a class="blocked" onclick="showNewsletter();" href="#">News</a>
+    <a class="blocked" onclick="showApplications();" href="#">Applications</a>
     <a class="blocked" onclick="showContact();" href="#">Contact</a>
     <footer id="footer">
       <div class="padleft row">
@@ -930,6 +931,18 @@
                 </div><!-- .entry-content -->
               </div>
             </div>
+          
+            <div id="applications" class="subcontent">
+              <h1>Applications</h1>
+              <div class="innercontent">
+                  <div class="whiteboxed">
+                    <br/>
+                     <p>Click <a target="_blank" href="http://sustainable.usc.edu/origins/">here</a> to learn more about the Sustainability 2020 Plan’s origins.<br/>
+                      Click <a target="_blank" href="docs/sustainability2020_booklet.pdf">here</a> to read the entire plan.</p>
+                   </div>
+                </div>
+              </div>
+          
             <div id="contact" class="subcontent">
               <h1>Contact</h1>
               <!-- uscesa@usc.edu -->
