--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
   <!-- Link Previews -->
   <link href="http://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <link href="http://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.css" rel="stylesheet">
-  <!-- MiniPreview stuff here -->
-   <script src="http://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.js"></script>
-</head>
-<!-- end link previews -->
-
+  <!--<link href="http://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.css" rel="stylesheet">
+   <script src="http://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.js"></script>-->
 
 </head>
 <body>
@@ -973,6 +969,7 @@
               </div>
             </div>
           </div>
+<!--
           <script type="text/javascript">
   $(function() {
     // to be discussed later
@@ -980,7 +977,7 @@
     $('#newsletter a').miniPreview({ prefetch: 'none' });
     // prefetch: 'none' or 'parenthover'
   });
-  </script>
+  </script>-->
         </body>
         <!-- Include at end of file -->
         <script src="js/custom.js"></script>
