--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
   <!-- Page title -->
   <title>USC ESA</title>
   <link href="css/custom.css" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:300|Oswald:500,700" rel="stylesheet">
-  <script src="js/jquery.min.js"></script>
-
-  <!-- Link Previews -->
-  <link href="http://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:300|Oswald:500,700|Roboto+Slab" rel="stylesheet">
   <!--<link href="http://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.css" rel="stylesheet">
    <script src="http://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.js"></script>-->
 
 </head>
 <body>
+  
   <!-- LOADING SCREEN FOR BETTER UI -->
   <div class="se-pre-con">
     <noscript>
@@ -978,7 +974,9 @@
     // prefetch: 'none' or 'parenthover'
   });
   </script>-->
-        </body>
+<script src="https://code.jquery.com/jquery-2.0.3.min.js" integrity="sha256-sTy1mJ4I/LAjFCCdEB4RAvPSmRCb3CU7YqodohyeOLo=" crossorigin="anonymous"></script>
+<script src="js/jquery.min.js"></script>        
+</body>
         <!-- Include at end of file -->
         <script src="js/custom.js"></script>
         </html>
