--- a/index.html
+++ b/index.html
@@ -205,15 +205,16 @@
           <h1>Executive Board</h1>
           <div>
             Executive Directors (<a href="#OliviaP">Olivia</a> &amp; <a href="#EmilyP">Emily</a>)<br>
+            Assistant Director (<a href="#Claire">Claire</a>)<br>
             Diretor of Events (<a href="#Joseph">Joseph</a>)<br>
             Director of Financial Operations (<a href="#Soven">Soven</a>)<br>
             Director of External Affairs (<a href="#Firuze">Firuze</a>)<br>
             Director of Internal Affairs (<a href="#Sachi">Sachi</a>)<br>
             Directors of Advocacy (<a href="#Carissa">Carissa</a> &amp; <a href="#Autumn">Autumn</a>)<br>
             Directors of Outreach (<a href="#Devin">Devin</a> &amp; <a href="#Margaux">Margaux</a>)<br>
-            Director of Public Relations (<a href="#Claire">Claire</a>)<br>
             Social Media Chairs (<a href="#Maryam">Maryam</a> &amp; <a href="#EmilyQ">Emily</a>)<br>
             Technology Chair (<a href="#Isabella">Isabella</a>)<br>
+            Graphic Designs Chair (<a href="#RaeAnn">RaeAnn</a>)<br)
             Community Gardens Chair (<a href="#Ogechi">Ogechi</a>)<br>
             Greek Relations Chairs (<a href="#OliviaC">Olivia</a> &amp; <a href="#Samantha">Samantha</a>)<br><br>
           </div>
@@ -281,7 +282,7 @@
                     Claire Mauss
                   </h2>
                   <em>
-                    Director of Public Relations
+                    Assistant Director
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -586,6 +587,32 @@
                   </figcaption>
                   <figcaption>
                     <strong>Spirit Vegetable:</strong> Artichokes
+                  </figcaption>
+                </figure>
+              </a>
+              <a>
+                <figure id="RaeAnn">
+                  <img src="images/esa-logo.png" alt="">
+                  <h2>
+                    RaeAnn Noakes
+                  </h2>
+                  <em>
+                    Graphic Designs Chair
+                  </em>
+                  <figcaption>
+                    <strong>Year:</strong> Sophomore
+                  </figcaption>
+                  <figcaption>
+                    <strong>Major:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Hometown:</strong> Baltimore, Maryland
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
