--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             Directors of Outreach (<a href="#Devin">Devin</a> &amp; <a href="#Margaux">Margaux</a>)<br>
             Social Media Chairs (<a href="#Maryam">Maryam</a> &amp; <a href="#EmilyQ">Emily</a>)<br>
             Technology Chair (<a href="#Isabella">Isabella</a>)<br>
-            Graphic Designs Chair (<a href="#RaeAnn">RaeAnn</a>)<br)
+            Graphic Designs Chair (<a href="#RaeAnn">RaeAnn</a>)<br>
             Community Gardens Chair (<a href="#Ogechi">Ogechi</a>)<br>
             Greek Relations Chairs (<a href="#OliviaC">Olivia</a> &amp; <a href="#Samantha">Samantha</a>)<br><br>
           </div>
