--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                     <strong>Major:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Hometown:</strong> Baltimore, Maryland
+                    <strong>Hometown:</strong> Baltimore, MD
                   </figcaption>
                   <figcaption>
                     <strong>Fun Fact:</strong>
