--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                 <p>Seen an environmental problem in our community? Have an idea you’d like to see come to life? An event you’d like to see on campus? Want to be more involved but don’t know how? Leave a question, comment, and/or suggestion below.</p>
                 <br>
                 <center>
-                  <form class="form-style-4" action="http://formspree.io/dgarry@usc.edu" method="post">
+                  <form class="form-style-4" action="http://formspree.io/uscesa@usc.edu" method="post">
                     <label for="field1">
                       <span>Your Name</span><input type="text" name="name" required="true" />
                     </label>
