--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
                     <br/>
                      <p>Click <a target="_blank" href="http://docs.google.com/forms/d/e/1FAIpQLScAlpmHlntLHdZ1ffzMlRm687GTYCmfDVEd5fpcZd6GhacWKA/viewform">here</a> for the ESA Member Org Funding Application.<br/>
                       Click <a target="_blank" href="http://docs.google.com/forms/d/1TPKDoubj_MSbZVuMojLJ_0xR2Ajj7npYu2UYjedOk-o/viewform?edit_requested=true#responses">here</a> for the ESA Member Org Media Request Form.</p>
-                     <p>Click <a target="_blank" href="https://uscgef.wordpress.com/application/">here</a> for the Green Engagement Fund application due Friday 11/3/17.<br/>
+                     <p>Click <a target="_blank" href="https://drive.google.com/file/d/0B7iMSBvk0tztM3dPdGtNMXNDMms/view">here</a> for the Green Engagement Fund application due Friday 11/3/17.<br/>
                    </div>
                 </div>
               </div>
