--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             Technology Chair (<a href="#Isabella">Isabella</a>)<br>
             Graphic Designs Chair (<a href="#RaeAnn">RaeAnn</a>)<br>
             Community Gardens Chair (<a href="#Ogechi">Ogechi</a>)<br>
-            Greek Relations Chairs (<a href="#OliviaC">Olivia</a> &amp; <a href="#Samantha">Samantha</a>)<br><br>
+            Greek Relations Chairs (<a href="#Isabella">Isabella</a> &amp; <a href="#Samantha">Samantha</a>)<br><br>
           </div>
           <div class="grid">
             <div>
@@ -421,7 +421,7 @@
                     <strong>Major:</strong> International Relations
                   </figcaption>
                   <figcaption>
-                    <strong>Minors:</strong> Environmental Studies and Law & Public Policy
+                    <strong>Minors:</strong> Environmental Studies
                   </figcaption>
                   <figcaption>
                     <strong>Hometown:</strong> New York
@@ -539,28 +539,31 @@
                 </figure>
               </a>
               <a>
-                <figure id="OliviaC">
-                  <img src="images/Olivia C 54.jpg" alt="">
+                <figure id="Isabella">
+                  <img src="images/Isabella 71.jpg" alt="">
                   <h2>
-                    Olivia Carmack
+                    Isabella Caltabiano
                   </h2>
                   <em>
                     Co-Greek Relations Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Junior
+                    <strong>Year:</strong> Sophomore
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Studies
+                    <strong>Major:</strong> International Relations
                   </figcaption>
                   <figcaption>
-                  <strong>Hometown:</strong> Palos Verdes, CA
+                    <strong>Minors:</strong> Environmental Studies
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact:</strong> When I was little I used to eat sticks of butter.
+                  <strong>Hometown:</strong> New York
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable:</strong> Cherry Red Tomato
+                    <strong>Fun Fact:</strong> I am trilingual
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Scallion
                   </figcaption>
                 </figure>
               </a>
