--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     Isabella Caltabiano
                   </h2>
                   <em>
-                    Technology Chair
+                    Technology Chair and Co-Greek Relations Chair
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -535,35 +535,6 @@
                   </figcaption>
                   <figcaption>
                     <strong>Spirit Vegetable:</strong> Carrot
-                  </figcaption>
-                </figure>
-              </a>
-              <a>
-                <figure id="Isabella">
-                  <img src="images/Isabella 71.jpg" alt="">
-                  <h2>
-                    Isabella Caltabiano
-                  </h2>
-                  <em>
-                    Co-Greek Relations Chair
-                  </em>
-                  <figcaption>
-                    <strong>Year:</strong> Sophomore
-                  </figcaption>
-                  <figcaption>
-                    <strong>Major:</strong> International Relations
-                  </figcaption>
-                  <figcaption>
-                    <strong>Minors:</strong> Environmental Studies
-                  </figcaption>
-                  <figcaption>
-                  <strong>Hometown:</strong> New York
-                  </figcaption>
-                  <figcaption>
-                    <strong>Fun Fact:</strong> I am trilingual
-                  </figcaption>
-                  <figcaption>
-                    <strong>Spirit Vegetable:</strong> Scallion
                   </figcaption>
                 </figure>
               </a>
