--- a/index.html
+++ b/index.html
@@ -859,6 +859,14 @@
                   Science Policy Group
                 </figcaption>
               </figure>
+             </a>
+            <a target="_blank" href="https://www.facebook.com/TSPatUSC/?ref=br_rs">
+              <figure>
+                <img src="images/memberorgs/Sustainability.jpg" alt="">
+                <figcaption>
+                  The Sustainability Project
+                </figcaption>
+              </figure>
 
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
