--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
               <figure>
                 <img src="images/memberorgs/Sustainability.jpg" alt="">
                 <figcaption>
-                  The Sustainability Project
+                  The Sustainability Project @ USC
                 </figcaption>
               </figure>
              </a>
