--- a/index.html
+++ b/index.html
@@ -870,6 +870,14 @@
              </a>
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
+              <!-- If a member or is deleted add these coming soon lines to the bottom
+                  <figure>
+                <img src="images/no-image.png" alt="">
+                <figcaption>
+                  Coming Soon
+                </figcaption>
+              </figure>
+            </a> -->
           </div>
         </div>
         <div id="newsletter" class="subcontent">
