--- a/index.html
+++ b/index.html
@@ -796,14 +796,6 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="http://www.facebook.com/GreeksGoGreenUSC/">
-              <figure>
-                <img src="images/memberorgs/ggg.jpg" alt="">
-                <figcaption>
-                  Greeks Go Green
-                </figcaption>
-              </figure>
-            </a>
             <a target="_blank" href="http://peaksandprofessors.org/">
               <figure>
                 <img src="images/memberorgs/peaks.jpg" alt="">
@@ -820,27 +812,11 @@
                 </figcaption>
               </figure>
             </a>
-            <a target="_blank" href="http://www.facebook.com/foodrecoveryusc/">
-              <figure>
-                <img src="images/memberorgs/foodrecovery.png" alt="">
-                <figcaption>
-                  Trojan Food Recovery Network
-                </figcaption>
-              </figure>
-            </a>
             <a target="_blank" href="http://scubadiveclub.weebly.com/">
               <figure>
                 <img src="images/memberorgs/uscdive.jpg" alt="">
                 <figcaption>
                  SCuba Diving Club
-                </figcaption>
-              </figure>
-            </a>
-            <a target="_blank" href="http://www.facebook.com/USCPFA/">
-              <figure>
-                <img src="images/memberorgs/pfa.jpg" alt="">
-                <figcaption>
-                  Preloved Fashion Association
                 </figcaption>
               </figure>
             </a>
@@ -864,10 +840,17 @@
               <figure>
                 <img src="images/memberorgs/Sustainability.jpg" alt="">
                 <figcaption>
-                  The Sustainability Project @ USC
+                  The Sustainability Project
                 </figcaption>
               </figure>
              </a>
+            <figure>
+                <img src="images/no-image.png" alt="">
+                <figcaption>
+                  Coming Soon
+                </figcaption>
+              </figure>
+            </a> 
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
               <!-- If a member or is deleted add these coming soon lines to the bottom
