--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                         </figure>
                       </a>
         -->
-        <div id="members" class="subcontent grid">
+        <div id="members" class="subcontent">
           <h1>Member Organizations</h1>
           <div>
             <a target="_blank" href="http://www.facebook.com/groups/clovrer/">
