--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                         </figure>
                       </a>
         -->
-        <div id="members" class="subcontent">
+        <div id="members" class="subcontent grid">
           <h1>Member Organizations</h1>
           <div>
             <a target="_blank" href="http://www.facebook.com/groups/clovrer/">
@@ -845,13 +845,6 @@
               </figure>
              </a>
             <figure>
-                <img src="images/no-image.png" alt="">
-                <figcaption>
-                  Coming Soon
-                </figcaption>
-              </figure>
-            </a> 
-          <figure>
                 <img src="images/no-image.png" alt="">
                 <figcaption>
                   Coming Soon
