--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
               </figure>
              </a>
              <figure>
-                <img src="images/no-image.png" alt="">
+                <img src="images/comingsoon.png" alt="">
                 <figcaption>
                   Coming Soon
                 </figcaption>
