--- a/index.html
+++ b/index.html
@@ -845,9 +845,8 @@
               </figure>
              </a>
              <figure>
-                <img src="images/no-image.png" alt="">
+                <img src="images/clear-image.png" alt="">
                 <figcaption>
-                  Coming Soon
                 </figcaption>
               </figure>
             </a> 
